--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -25,7 +25,7 @@
     font-size: 18px;
     color: #000;
     position: relative;
-    transition: .2s ease-in-out;
+    // transition: .2s ease-in-out;
     @media(max-width: 1199px){
       padding: 7px 0 7px;
     }
