--- a/src/app/dashboard/components/graph/graph.component.html
+++ b/src/app/dashboard/components/graph/graph.component.html
@@ -107,7 +107,7 @@
      <div class="amcharts-stock_chart_div" id="tv_chart_container"></div>
      <div class="widget__graph--mob">
       <!-- <div class="amcharts-stock_chart_div" id="tv_chart_container"></div> -->
-      <div class="widget__buy-sell-btn-wrap">
+      <div class="trade-buttons-wr">
         <a href="#" class="btn btn--active widget__trading-btn widget__trading-btn--buy">Buy BTC</a>
         <a href="#" class="btn btn--active widget__trading-btn widget__trading-btn--sell" >Sell BTC</a> <!-- (click)="onSubmit(SELL)" -->
       </div>
