--- a/src/app/shared/components/date-mask-input/date-mask-input.component.html
+++ b/src/app/shared/components/date-mask-input/date-mask-input.component.html
@@ -8,5 +8,6 @@
   name="mask"
   appDateMask="true"
   (blur)="onBlur($event)"
+  (focus)="onFocus($event)"
   (input)="inputData($event)"
   maxlength="10">
