--- a/src/app/dashboard/components/chat/chat.component.scss
+++ b/src/app/dashboard/components/chat/chat.component.scss
@@ -12,6 +12,7 @@ perfect-scrollbar{
   background-color: transparent;
 }
 .widget__content{
+  margin-top: 25px;
   height: calc(100% - 41px);
 }
 @media (min-width:1200px) {
