--- a/src/app/dashboard/components/chat/chat.component.html
+++ b/src/app/dashboard/components/chat/chat.component.html
@@ -20,9 +20,9 @@
       </div>
     </div>
   </div>
-  <div class="widget__header--mob">
+  <!-- <div class="widget__header--mob"> -->
     <!-- <div class="widget__name-mob">Chat</div> -->
-  </div>
+  <!-- </div> -->
   <div class="widget__content widget__content--show-all" [ngStyle]="scrollStyles">
 
     <div class="widget__chat-wrap">
