show message on closed cripto

--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -170,6 +170,10 @@ perfect-scrollbar{
 }
 
 // TEMP STYLE
+.withdrawal__closed-error {
+  color: #EB5757;
+}
+
 .btn--empty-blue{
   &:hover, &:focus{
     background-color: transparent !important;
