--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -42,33 +42,53 @@
         </div>
       </div>
 
-      <div class="wrap-input send__wrap-input" [ngClass]="{'wrap-input--error': form.get('amount').invalid && (form.get('amount').touched || isSubmited)}">
-        <div class="avaliable">{{'Avaliable:' | translate}}
-          <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeCrypto ? activeCrypto.name : ''}}
-          </a>
+      <div class="wrap-input send__wrap-input" *ngIf="cryptoInfoByName && !cryptoInfoByName.merchantCurrencyData.length">
+        <div class="withdrawal__closed-error" >
+          Sorry, withdrawal is closed for current moment!
         </div>
-        <app-price-input [placeholder]="'Amount'" [currencyName]="activeCrypto.name" (customInput)="amountInput($event)" name="amount" formControlName="amount"></app-price-input>
+      </div>
 
-        <span class=" wrap-input__message--show" *ngIf="form.controls['amount'].errors && !form.controls['amount'].errors['isMinThenMinWithdraw']">
-      {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
+      <div class="wrap-input send__wrap-input"
+           [ngClass]="{'wrap-input--error': form.get('amount').invalid
+           && (form.get('amount').touched || isSubmited)}"
+           *ngIf="cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length">
+        <div class="avaliable">{{'Avaliable:' | translate}}
+          <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeCrypto ? activeCrypto.name : ''}}</a>
+        </div>
+        <app-price-input [placeholder]="'Amount'"
+                         [currencyName]="activeCrypto.name"
+                         (customInput)="amountInput($event)"
+                         name="amount" formControlName="amount">
+        </app-price-input>
+
+        <span class=" wrap-input__message--show"
+              *ngIf="form.controls['amount'].errors && !form.controls['amount'].errors['isMinThenMinWithdraw']">
+            {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
+        </span>
 
         <!--Input error section starts-->
         <div *ngIf="form.get('amount').errors != null">
-        <span class=" wrap-input__message--show" *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-              [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] && (form.controls['amount'].touched || isSubmited)}">
-      {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
-        <span class="wrap-input__message wrap-input__message--show"
-              *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && (form.controls['amount'].touched || isSubmited)">
-      {{'Max sum for withdrawal' | translate}} {{activeBalance}}</span>
+           <span class=" wrap-input__message--show"
+                 *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
+                 [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw']
+                 && (form.controls['amount'].touched || isSubmited)}">
+              {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}
+           </span>
+           <span class="wrap-input__message wrap-input__message--show"
+                 *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance']
+                 && (form.controls['amount'].touched || isSubmited)">
+              {{'Max sum for withdrawal' | translate}} {{activeBalance}}
+           </span>
         </div>
         <!--Input error section ends-->
-
       </div>
     </div>
 
 
     <div class="send__inputs-wrap">
+
       <div class="wrap-input  send__wrap-input"
+           *ngIf="cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length"
            [ngClass]="{'wrap-input--error': !form.controls['address'].valid &&
             (form.controls['address'].touched || isSubmited)}">
         <input class="wrap-input__input" name="address" formControlName="address" required>
@@ -76,14 +96,19 @@
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
-              *ngIf="!form.controls['address'].valid && (form.controls['address'].touched || isSubmited)">
-      {{'You should enter' | translate}} {{activeCrypto ? activeCrypto.name : ''}} {{'address for withdrawal' | translate}}</span>
+              *ngIf="!form.controls['address'].valid
+              && (form.controls['address'].touched || isSubmited)">
+          {{'You should enter' | translate}} {{activeCrypto ? activeCrypto.name : ''}} {{'address for withdrawal' | translate}}
+        </span>
         <!--Input error section ends-->
       </div>
 
-      <div class="wrap-input send__wrap-input" *ngIf="isMemo"
-           [ngClass]="{'wrap-input--error': !form.controls['memo'].valid &&
-            (form.controls['memo'].touched || isSubmited)}">
+      <div class="wrap-input send__wrap-input"
+           *ngIf="isMemo
+           && cryptoInfoByName
+           && cryptoInfoByName.merchantCurrencyData.length"
+           [ngClass]="{'wrap-input--error': !form.controls['memo'].valid
+            && (form.controls['memo'].touched || isSubmited)}">
         <input class="wrap-input__input" name="memo" formControlName="memo">
         <label class="wrap-input__label">{{memoName | translate}}</label>
         <div class="wrap-input__line"></div>
