--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
@@ -76,7 +76,7 @@
     }
     &__inputs-wrap{
       flex-direction: row;
-      align-items: flex-start;
+      // align-items: flex-start;
       justify-content: space-between;
     }
     &__select{
