--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -42,12 +42,14 @@
 
         <!--Input error section starts-->
         <div *ngIf="form.get('amount').errors != null">
+          <div class="input-hint-wrapper">
         <span class=" wrap-input__message--show" *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
               [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] && (form.controls['amount'].touched || isSubmited)}">
       {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeFiat ? activeFiat.name : ''}}</span>
           <span class="wrap-input__message wrap-input__message--show"
                 *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && (form.controls['amount'].touched || isSubmited)">
       {{'Max sum for withdrawal' | translate}} {{activeBalance}}</span>
+        </div>
         </div>
         <!--Input error section ends-->
       </div>
@@ -107,7 +109,8 @@
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="!form.controls['address'].valid &&
                (form.controls['address'].touched || isSubmited)">
-      {{'Set merchant adress for withdrawal' | translate}}</span>
+               <div class="input-hint-wrapper">
+      {{'Set merchant adress for withdrawal' | translate}}</div></span>
         <!--Input error section ends-->
       </div>
 
@@ -157,11 +160,9 @@
       <li class="note__list-item">{{'Once you have submitted your withdrawal request, we will send a confirmation email' | translate}}.
         {{'Please then click on the confirmation link in your email' | translate}}.
       </li>
-      <li class="note__list-item">
-        {{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.
+      <li class="note__list-item">{{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.
       </li>
-      <li class="note__list-item">
-        {{'Do not withdraw directly to a crowdfund or ICO' | translate}}. {{'We will not credit your account with tokens from that sale' | translate}}.
+      <li class="note__list-item">{{'Do not withdraw directly to a crowdfund or ICO' | translate}}. {{'We will not credit your account with tokens from that sale' | translate}}.
       </li>
     </ul>
   </div>
