--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
@@ -20,13 +20,7 @@
     width: 100%;
     max-width: 230px;
     margin-bottom: 24px;
-    .avaliable {
-      position: absolute;
-      right: 0;
-      top: -16px;
-      font-size: 12px;
-      line-height: 14px;
-    }
+    
   }
   &__line {
     height: 1px;
@@ -51,6 +45,10 @@
     width: 50%;
     text-align: right;
     font-weight: bold;
+    @media(max-width: 1199px){
+      color: #DEDEFB;
+      font-weight: 300;
+    }
   }
   &__merchant-comission {
     display: block;
@@ -205,5 +203,21 @@ perfect-scrollbar{
         }
       }
     }
+  }
+}
+.avaliable{
+      position: absolute;
+      right: 0;
+      top: -16px;
+      font-size: 12px;
+      line-height: 14px;
+      @media(max-width:1199px){
+        color: #DEDEFB;
+      }
+    }
+
+.select__value--active{
+  @media(max-width: 1199px) {
+    color: #DEDEFB;
   }
 }
