--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
@@ -20,17 +20,14 @@
   &__wrap-input{
     width: 100%;
     max-width: 230px;
-    .avaliable{
-      position: absolute;
-      right: 0;
-      top: -16px;
-      font-size: 12px;
-      line-height: 14px;
-    }
+    
   }
   &__line{
     height: 1px;
     background-color: #24253F;
+    @media(max-width: 1199px){
+      background-color: #94C2FF;
+    }
   }
   &__info{
     margin-top: 28px;
@@ -51,6 +48,8 @@
     width: 50%;
     text-align: right;
     font-weight: bold;
+    color: #DEDEFB;
+            font-weight: 300;
   }
   &__merchant-comission{
     display: block;
@@ -100,6 +99,8 @@
     }
     &__info-value{
       text-align: left;
+      color: #000;
+            font-weight: 400;
     }
     &__merchant-comission{
       display: inline-block;
@@ -132,7 +133,9 @@
     margin: 0 auto;
   }
 }
-
+.select__value--active{
+  color: #DEDEFB;
+}
 
 ::ng-deep div.wrap-input.send__wrap-input {
   .wrap-input__message{
@@ -192,10 +195,27 @@
     &.send__wrap-input {
       app-price-input {
         label {
+          @media(max-width: 1199px){
+            
+          color: #DEDEFB;
+          }
+          @media(min-width: 1200px){
+
           background-color: #fff !important;
+          }
         }
       }
     }
   }
 }
 
+.avaliable{
+      position: absolute;
+      right: 0;
+      top: -16px;
+      font-size: 12px;
+      line-height: 14px;
+      @media(max-width:1199px){
+        color: #DEDEFB;
+      }
+    }
