set limit for date input

--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -135,7 +135,12 @@
         <div class="row row--jcsb">
           <div class="wrap-input filters-popup__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >{{'From' | translate}}</label>
-            <app-date-mask-input [innValue]="modelDateFrom" (validDate)="dateFromChanged($event)"></app-date-mask-input>
+            <app-date-mask-input
+              [innValue]="modelDateFrom"
+              (inputFocus)="focusOrBlurDateFrom($event)"
+              (inputEmpty)="clearModelDateFrom()"
+              (validDate)="dateFromChanged($event)"
+            ></app-date-mask-input>
             <my-date-picker
               name="from"
               [options]="myDatePickerOptions"
@@ -147,7 +152,12 @@
           </div>
           <div class="wrap-input filters-popup__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >{{'To' | translate}}</label>
-            <app-date-mask-input [innValue]="modelDateTo" (validDate)="dateToChanged($event)"></app-date-mask-input>
+            <app-date-mask-input
+              [innValue]="modelDateTo"
+              (inputFocus)="focusOrBlurDateTo($event)"
+              (inputEmpty)="clearModelDateTo()"
+              (validDate)="dateToChanged($event)"
+            ></app-date-mask-input>
             <my-date-picker
               name="to"
               [options]="myDatePickerOptions"
@@ -200,6 +210,8 @@
           <app-date-mask-input
             [innValue]="modelDateFrom"
             (validDate)="dateFromChanged($event)"
+            (inputEmpty)="clearModelDateFrom()"
+            (inputFocus)="focusOrBlurDateFrom($event)"
             [disableAutoFocus]="true"
           ></app-date-mask-input>
           <my-date-picker
@@ -217,6 +229,8 @@
           <app-date-mask-input
             [innValue]="modelDateTo"
             (validDate)="dateToChanged($event)"
+            (inputFocus)="focusOrBlurDateTo($event)"
+            (inputEmpty)="clearModelDateTo()"
             [disableAutoFocus]="true"
           ></app-date-mask-input>
           <my-date-picker
