--- a/src/app/dashboard/components/trading/trading.component.scss
+++ b/src/app/dashboard/components/trading/trading.component.scss
@@ -3,6 +3,9 @@
 }
 .button-fixed-block{
   padding-bottom: 90px;
+  @media(max-width: 1199px){
+    padding-bottom: 66px;
+  }
 }
 .radio__input:checked{
   &+.radio__text{
