--- a/src/assets/scss/components/_hints.scss
+++ b/src/assets/scss/components/_hints.scss
@@ -1,7 +1,7 @@
 .input-hint-wrapper{
 	position: absolute;
 	z-index: 1;
-	bottom: 60px;
+	    top: -60px;
 	border-radius: 4px;
 	padding: 15px;
 	box-shadow: 0 0 15px #bebebe;
