--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -38,7 +38,7 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.exExchangeRate  | roundCurrency: arrPairName[1] | formatCurrency}} {{arrPairName[1]}}</span>
+      <span>{{(item.exExchangeRate || item.limitRate)  | roundCurrency: arrPairName[1] | formatCurrency}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
       <span>{{item.orderBaseType !== 'STOP_LIMIT' ? '-' : item.stopRate  | roundCurrency: arrPairName[1] | formatCurrency}} {{item.orderBaseType !== 'STOP_LIMIT' ? '' : arrPairName[1]}}</span>
