--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -289,7 +289,7 @@
           </td>
           <td class="table__cell">
             <span>
-              {{item.exExchangeRate | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
+              {{(item.exExchangeRate || item.limitRate) | roundCurrency: currency(item.currencyPairName, 2) | formatCurrency}}
               {{item.currencyPairName | splitCurrency: 2}}
             </span>
           </td>
